Implement a BitStreamWriter that writes a string

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@ set(CATCH_MAIN catch_main.cc)
 
 add_executable(BitToolsTests
     BitStreamWriterTest.cc
+    StringBitStreamWriterTest.cc
     ${CATCH_MAIN}
 )
 target_link_libraries(BitToolsTests BitTools)
